Bug 69326 - Incorrect sizeof in a Valgrind hint macro call
Summary: Incorrect sizeof in a Valgrind hint macro call
Status: RESOLVED FIXED
Alias: None
Product: dbus
Classification: Unclassified
Component: core (show other bugs)
Version: unspecified
Hardware: All All
: low minor
Assignee: Havoc Pennington
QA Contact:
URL:
Whiteboard: review+
Keywords: patch
Depends on:
Blocks:
 
Reported: 2013-09-13 16:54 UTC by Sviatoslav Chagaev
Modified: 2013-09-16 15:25 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Patch for 1.6 (819 bytes, patch)
2013-09-13 16:56 UTC, Sviatoslav Chagaev
Details | Splinter Review
Patch for 1.7 (819 bytes, patch)
2013-09-13 16:56 UTC, Sviatoslav Chagaev
Details | Splinter Review
Patch for 1.6 (819 bytes, patch)
2013-09-13 16:57 UTC, Sviatoslav Chagaev
Details | Splinter Review

Description Sviatoslav Chagaev 2013-09-13 16:54:58 UTC
Sizeof is taken of the pointer variable, not the memory it points to.
Comment 1 Sviatoslav Chagaev 2013-09-13 16:56:21 UTC
Created attachment 85775 [details] [review]
Patch for 1.6
Comment 2 Sviatoslav Chagaev 2013-09-13 16:56:51 UTC
Created attachment 85776 [details] [review]
Patch for 1.7
Comment 3 Sviatoslav Chagaev 2013-09-13 16:57:19 UTC
Created attachment 85777 [details] [review]
Patch for 1.6
Comment 4 Simon McVittie 2013-09-16 09:54:19 UTC
Well spotted. I'll apply this soon.

For future reference, you don't need to supply patches for both 1.6 and 1.7 if they're basically the same - I merge 1.6 into 1.7 whenever I change 1.6 anyway.

I might not apply this to 1.6 because it's a developer-only change, and the stable branch is meant to get minimal changes.
Comment 5 Simon McVittie 2013-09-16 13:47:09 UTC
Fixed in git for 1.7.6
Comment 6 Sviatoslav Chagaev 2013-09-16 15:25:39 UTC
Actually, the four bugs I submitted were found by a static code analysis tool.

Okay, thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.