Fix incorrect sizeof in a Valgrind hint macro call.

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=69326
Reviewed-by: Simon McVittie <simon.mcvittie@collabora.co.uk>